# web3-sdk

./: .gitignore  README.md  vercel.json
contracts/: StvorRegistry.ts  compile.mjs  deploy.mjs  package-lock.json  package.json  stvor_registry.fc
contracts/tests/: registry.test.ts
crypto-core/: Cargo.toml
crypto-core/src/: aa.rs  crypto.rs  lib.rs  nist_tests.rs  pqc.rs  ratchet.rs  wasm.rs
demo/: index.html
demo/wasm/: stvor_crypto.js
docs/: CNAME  index.html
docs/wasm/: stvor_crypto_bg.wasm
sdk/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
sdk/scripts/: copy-wasm.mjs
sdk/src/: account-abstraction.ts  index.ts  stvor.ts  ton-storage.ts  wallet.ts
sdk/src/__tests__/: wasm.test.ts
sdk/wasm/: .gitignore  stvor_crypto.d.ts  stvor_crypto_bg.wasm.d.ts
