[package]
name = "stvor-crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Pure Rust — zero C dependencies
p256 = { version = "0.13", features = ["ecdh", "ecdsa", "pkcs8"] }
ml-kem = { version = "0.3", features = ["getrandom"] }
# getrandom 0.4 (used by ml-kem via crypto-common) needs wasm_js for WASM targets
getrandom04 = { package = "getrandom", version = "0.4", features = ["wasm_js"], optional = true }
aes-gcm = { version = "0.10", features = ["aes"] }
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
zeroize = { version = "1.7", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = { version = "0.22", features = ["alloc"] }

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
